--- a/src/main/resources/templates/ott_contents/gameInfo.html
+++ b/src/main/resources/templates/ott_contents/gameInfo.html
@@ -125,7 +125,7 @@
                         </div>
                       </div>
                     <!-- </div> -->
-                    <div class="anime__details__btn">
+                    <div class="anime__details__btn" th:if="${#authentication.name}" >
                       <!-- 팔로우버튼 누르면 유저상세페이지에 해당 컨텐츠 띄워줌
                         로그인한 상태에서만 보여짐 -->
                       <button class="follow-btn follow" th:data-mid="${gameInfo.gid}">Follow</button>
@@ -230,18 +230,19 @@
               class="anime__review__item__text reply"
               th:data-rno="${reply.rno}"
               th:data-replyer="${reply.replyer}"
+              th:data-replyerNickname="${reply.replyerNickname}"
               th:data-text="${reply.text}"
               th:data-id="${reply.gid}"
               th:data-mention="${reply.mention}"
               th:data-ref="${reply.ref}"
             >
-              <span class="replyer text-light" th:text="${reply.replyer}"></span>
+              <span class="replyer text-light" th:text="${reply.replyerNickname}"></span>
               <span class="text-secondary" th:if="${reply.mention}" th:text="' - '+${reply.mention}+에게"></span>
               <span class="text-secondary" th:text="${reply.createdDate}"> 작성자 - 1 Hour ago</span>
-              <button type="button" class="delete-btn btn btn-secondary btn-sm" th:data-rno="${reply.rno}">x</button>
-              <button type="button" class="update-btn btn btn-secondary btn-sm" th:data-rno="${reply.rno}">수정</button>
-              <button type="button" class="mention-btn btn btn-secondary btn-sm" th:data-rno="${reply.rno}">
-                대댓글 달기
+              <button type="button" class="delete-btn btn btn-secondary btn-sm" th:data-rno="${reply.rno}" th:if="${#authentication.name == reply.replyer}">x</button>
+              <button type="button" class="update-btn btn btn-secondary btn-sm" th:data-rno="${reply.rno}" th:if="${#authentication.name == reply.replyer}" >수정</button>
+              <button type="button" class="mention-btn btn btn-secondary btn-sm" th:data-rno="${reply.rno}" th:if="${#authentication.name != 'anonymousUser'}">
+                대댓글
               </button>
               <p th:text="${reply.text}">댓글 텍스트</p>
             </div>
@@ -258,9 +259,8 @@
             <a class="mention text-light"></a>
             <form id="replyForm" method="post">
               <input type="hidden" name="gid" th:value="${gameInfo.gid}" />
-              <!-- ToDo 실제 사용자의 아이디를 받아야함 todo -->
               <input type="hidden" name="rno" />
-              <input type="hidden" name="replyer" th:value="user1" />
+              <input type="hidden" name="replyer" th:value="${#authentication.name}" />
               <input type="hidden" name="mention" />
               <input type="hidden" name="ref" />
               <textarea name="text" placeholder="Your Comment"></textarea>
