--- a/src/main/resources/templates/error/emailAlreadyExists.html
+++ b/src/main/resources/templates/error/emailAlreadyExists.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<main layout:fragment="content">
+<html lang="en" layout:decorate="~{layouts/layout}">
+  <main layout:fragment="content">
     <h1>에러가 났어요~</h1>
     <a th:href="@{/}">돌아가기</a>
-</main>
+  </main>
 </html>
