--- a/src/main/resources/templates/ott_contents/gameList.html
+++ b/src/main/resources/templates/ott_contents/gameList.html
@@ -53,7 +53,7 @@
               <div>
                 <a th:href="@{/api/games/read/{gid}(gid=${game.gid})}">
                   <img
-                    th:src="@{'/images/gameimages/' + ${game.image.imgName}}"
+                    th:src="@{'/images/gameimages/' + ${game.imgUrl}}"
                     onerror="this.onerror=null; this.src='/images/sample.png';"
                     alt="게임 이미지"
                     loading="lazy"
@@ -62,12 +62,12 @@
                 <!-- 할인율이 0이 아니면 '할인중' 표시 -->
                 <div class="discount-badge" th:if="${game.discountRate != 0}">SALE !!!</div>
                 <!-- <div class="ep">18 / 18</div> -->
-                <!-- 추후 평점위치 <div class="comment"><i class="fa fa-comments"></i> 11</div> -->
-                <!-- 추후 댓글갯수위치 <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
+                <div class="comment" th:text="${game.rank}"><i class="fa fa-comments"></i> 11</div>
+                <div class="view" th:text="${game.replies}"><i class="fa fa-eye"></i> 9141</div>
               </div>
               <div class="product__item__text">
                 <ul>
-                  <li th:text="${game.genres}"></li>
+                  <li th:text="${game.genres}">genres</li>
                 </ul>
                 <h5>
                   <a th:href="@{/api/games/read/{gid}(gid=${game.gid})}" th:text="${game.title}"></a>
