--- a/src/main/resources/templates/ott_contents/movieList.html
+++ b/src/main/resources/templates/ott_contents/movieList.html
@@ -36,19 +36,19 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${movies}">
+          <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${movies.dtoList}">
             <div class="product__item">
               <a th:href="@{/api/movies/read/{mid}(mid=${movie.mid})}">
                 <img
-                  th:src="@{'/images/movieimages/' + ${movie.image.imgName}}"
+                  th:src="@{'/images/movieimages/' + ${movie.imgUrl}}"
                   onerror="this.onerror=null; this.src='/images/sample.png';"
                   alt="영화 이미지"
                   loading="lazy"
                   class="product__item__pic"
               /></a>
-              <!-- <div class="ep">18 / 18</div> -->
-              <!-- 추후 평점위치 <div class="comment"><i class="fa fa-comments"></i> 11</div> -->
-              <!-- 추후 댓글갯수위치 <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
+              <div class="ep" th:text="${movie.rank}">18 / 18</div>
+              <div class="comment"><i class="fa fa-comments"></i> 11</div>
+              <div class="view"><i class="fa fa-eye"></i> 9141</div>
 
               <div class="product__item__text">
                 <ul class="genre">
