main페이지 디자인수정중

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" layout:decorate="~{layouts/layout}">
   <main layout:fragment="content">
-    <section class="hero">
+    <!-- <section class="hero">
       <div class="container">
         <div class="hero__slider owl-carousel owl-loaded">
           <div class="hero__items set-bg" data-setbg="img/hero/hero-1.jpg">
@@ -45,7 +45,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Hero Section End -->
 
 
