--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -679,7 +679,7 @@ ol {
   background-repeat: no-repeat;
 }
 
-.product__item__pic .ep {
+.ep {
   font-size: 13px;
   color: #ffffff;
   background: #e53637;
@@ -691,7 +691,7 @@ ol {
   top: 10px;
 }
 
-.product__item__pic .comment {
+.comment {
   font-size: 13px;
   color: #ffffff;
   background: #3d3d3d;
@@ -700,10 +700,10 @@ ol {
   border-radius: 4px;
   position: absolute;
   left: 10px;
-  bottom: 10px;
+  bottom: 110px;
 }
 
-.product__item__pic .view {
+.view {
   font-size: 13px;
   color: #ffffff;
   background: #3d3d3d;
@@ -711,8 +711,8 @@ ol {
   padding: 2px 10px;
   border-radius: 4px;
   position: absolute;
-  right: 10px;
-  bottom: 10px;
+  left: 220px;
+  bottom: 110px;
 }
 
 .product__item__text {
