--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,28 @@
   <main layout:fragment="content">
     <section class="hero">
       <div class="container">
-      
+      <form action="/api/movies/list" method="get">
+        <select name="id" id="id" >
+          <option value="m">영화</option>
+          <option value="g">게임</option>
+        </select>
+        movie
+        <select name="type" id="type">
+          <option value="t">제목</option>
+          <!-- <option value="g">장르</option> -->
+          <option value="d">감독</option>
+        </select>
+        <input type="text" name="keyword" id="search">
+      </form>
+      <form action="/api/game/list" method="get">
+        game
+        <select name="type" id="type">
+          <option value="t">제목</option>
+          <!-- <option value="g">장르</option> -->
+          <option value="d">감독</option>
+        </select>
+        <input type="text" name="keyword" id="search">
+      </form>
       </div>
     </section>
     <!-- Hero Section End -->
@@ -20,8 +41,8 @@
             <div class="popular__product">
               <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <div class="section-title">
-                    <h4>영화 인기순위</h4>
+                  <div class="section-title" >
+                    <h4>영화</h4>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
@@ -56,8 +77,8 @@
           <div class="popular__product">
             <div class="row">
               <div class="col-lg-8 col-md-8 col-sm-8">
-                <div class="section-title">
-                  <h4>게임 인기순위</h4>
+                <div class="section-title" >
+                  <h4>게임</h4>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
