리스트최상단이동버튼추가

--- a/src/main/resources/templates/ott_contents/gameInfo.html
+++ b/src/main/resources/templates/ott_contents/gameInfo.html
@@ -54,7 +54,7 @@
               <div class="row">
                 <div class="col-lg-3">
                   <img
-                    th:src="@{'/images/gameimages/' + ${gameInfo.image.imgName}}"
+                    th:src="@{${gameInfo.image != null} ? '/images/gameimages/' + ${gameInfo.image.imgName} : '/images/sample.png'}"
                     onerror="this.onerror=null; this.src='/images/sample.jpg';"
                     alt="게임 이미지"
                     loading="lazy"
