--- a/src/main/resources/templates/ott_contents/movieList.html
+++ b/src/main/resources/templates/ott_contents/movieList.html
@@ -2,6 +2,7 @@
 <html lang="en" layout:decorate="~{layouts/layout}">
   <!-- <html> -->
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <th:block layout:fragment="css">
@@ -41,7 +42,7 @@
               <div class="product__item__pic">
                 <a th:href="@{/api/movies/read/{mid}(mid=${movie.mid})}">
                   <img
-                    th:src="@{'/images/movieimages/' + ${movie.image.imgName}}"
+                    th:src="@{${movie.image != null} ? '/images/movieimages/' + ${movie.image.imgName} : '/images/sample.png'}"
                     onerror="this.onerror=null; this.src='/images/sample.jpg';"
                     alt="영화 이미지"
                     loading="lazy"
@@ -67,6 +68,9 @@
             </div>
           </div>
         </div>
+        <div>
+          <button id="scrollToTopBtn" title="맨 위로"><i class="fa fa-arrow-up"></i></button>
+        </div>
       </div>
       <!-- api 응답 값 추출 -->
       <!-- <div th:each="movie : ${movies}">
@@ -75,9 +79,9 @@
         <p th:text="${movie.genres}"></p>
       </div> -->
     </div>
-
     <th:block layout:fragment="script">
       <!-- 개별 페이지 script 작성 -->
+      <script th:src="@{/js/scroll.js}"></script>
     </th:block>
   </body>
 </html>
