--- a/src/main/resources/templates/user/userProfile.html
+++ b/src/main/resources/templates/user/userProfile.html
@@ -13,7 +13,7 @@
           <div class="col-md-4 d-flex flex-column align-items-center mb-4 mb-md-0">
             <!-- 동그란 프로필 이미지 -->
             <div class="mb-3">
-              <img id="profile-img" th:src="@{${userProfileDTO.profileImageUrl}}" alt="프로필" class="rounded-circle shadow" style="width: 200px; height: 200px; object-fit: cover; border: 3px solid #277aff; background: #eee" />
+              <img id="profile-img" th:src="${userProfileDTO.profileImageUrl == null} ? '/images/sample.jpg' : '/images/view/' + ${userProfileDTO.profileImageUrl}" alt="프로필" class="rounded-circle shadow" style="width: 200px; height: 200px; object-fit: cover; border: 3px solid #277aff; background: #eee" />
               <img  />    
 <script>
   document.getElementById("profile-img").src += "?t=" + Date.now();
@@ -22,13 +22,26 @@
 
             <!-- 프로필 관련 버튼 -->
             <div class="d-flex flex-column w-100 px-4" style="gap: 8px">
-              
+              <form th:action="@{/user/uploadProfile}" method="post" enctype="multipart/form-data">
+                <input type="hidden" name="id" th:value="${userProfileDTO.id}">
+              <button type="button"
+                      class="profile-btn profile-btn-secondary"
+                      
+                      onclick="document.getElementById('profileImage').click();">
+                사진 변경
+                <input type="file"
+                       id="profileImage"
+                       name="file"
+                       accept="image/*"
+                       style="display:none; position:absolute; left:0; top:0; width:100%; height:100%; opacity:0;"
+                       onchange="this.form.submit()">
+              </button>
               <button type="button"
                 class="profile-btn profile-btn-lightgray"
                  th:onclick="|location.href='@{/user/modifyUserProfile(id=${userProfileDTO.id})}'|">
                 수정
               </button>
-
+            </form>
             <button type="button" class="profile-btn profile-btn-danger">
               <a th:href="@{/user/delete(id=${userProfileDTO.id})}">회원탈퇴</a>
             </button>
