--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,29 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" layout:decorate="~{layouts/layout}">
   <main layout:fragment="content">
-    <section class="hero">
+    <!-- <section class="hero">
       <div class="container">
-      <form action="/api/movies/list" method="get">
-          <button value="m">영화</button>
-        <select name="type" id="type">
-          <option value="t">제목</option>
-          <!-- <option value="g">장르</option> -->
-          <option value="d">감독</option>
-        </select>
-        <input type="text" name="keyword" id="search">
-      </form>
-      <form action="/api/games/list" method="get">
-        <button>게임</button>
-        <select name="type" id="type">
-          <option value="t">제목</option>
-          <!-- <option value="g">장르</option> -->
-          <option value="d">개발사</option>
-          <option value="p">유통사</option>
-        </select>
-        <input type="text" name="keyword" id="search">
-      </form>
+      
+      
       </div>
-    </section>
+    </section> -->
     <!-- Hero Section End -->
 
     <!-- Head -->
@@ -40,17 +23,26 @@
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <div class="section-title" >
                     <h4>영화</h4>
+                    
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <div class="btn__all">
-                    <a th:href="@{/api/movies/list}" class="primary-btn">View All</a>
-                  </div>
+                    <div class="primary-btn">
+                      <form action="/api/movies/list" method="get" class="search-box">
+                      <select name="type" id="type">
+                        <option value="t">제목</option>
+                        <!-- <option value="g">장르</option> -->
+                        <option value="d">감독</option>
+                      </select>
+                      <input type="text" name="keyword" id="search">
+                      </form>
+                    </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${movies}">
-                  <div class="product__item">
+                  <div class="product__item mainmovie">
                     <a th:href="@{/api/movies/read/{mid}(mid=${movie.mid})}">
                       <img
                         th:src="@{'/images/movieimages/' + ${movie.imgUrl}}"
@@ -60,7 +52,7 @@
                         class="anime__details__pic"
                       />
                     </a>
-                    <div class="rank" th:text="${movie.rank}+위"></div>
+                    <!-- <div class="rank" th:text="${movie.rank}+위"></div> -->
                     <div class="product__item__text">
                       <h5>
                         <a th:href="@{/api/movies/read/{mid}(mid=${movie.mid})}" th:text="${movie.title}">제목</a>
@@ -80,15 +72,25 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="btn__all">
-                  <a th:href="@{/api/games/list}" class="primary-btn">View All</a>
+                  <div class="primary-btn">
+                    <form action="/api/games/list" method="get" class="search-box">
+                    <select name="type" id="type">
+                      <option value="t">제목</option>
+                      <!-- <option value="g">장르</option> -->
+                      <option value="d">개발사</option>
+                      <option value="p">유통사</option>
+                    </select>
+                    <input type="text" name="keyword" id="search">
+                  </form>
+                  </div>
                 </div>
               </div>
-              <ul class="filter__controls">
+              <!-- <ul class="filter__controls">
                 <li class="active" data-filter="*">Day</li>
                 <li data-filter=".week">Week</li>
                 <li data-filter=".month">Month</li>
                 <li data-filter=".years">Years</li>
-              </ul>
+              </ul> -->
               <div class="filter__gallery"></div>
                 <div class="popular__product">
               </div>
@@ -104,7 +106,7 @@
                         class="anime__details__pic"
                       />
                     </a>
-                    <div class="rank" th:text="${game.rank}+위"></div>
+                    <!-- <div class="rank" th:text="${game.rank}+위"></div> -->
                     <div class="product__item__text">
 
                       <h5>
